// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker Picker render visible 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-popup"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-picker-wrapper"
      >
        <div
          class="za-picker-header"
        >
          <div
            class="za-picker-cancel"
          >
            取消
          </div>
          <div
            class="za-picker-title"
          >
            请选择
          </div>
          <div
            class="za-picker-submit"
          >
            确定
          </div>
        </div>
        <div
          class="za-picker-panel"
        >
          <div
            class="za-picker-mask-top"
          />
          <div
            class="za-picker-view"
          >
            <div
              class="za-wheel"
            >
              <div
                class="za-wheel-content"
              >
                <div
                  class="za-wheel-item za-wheel-item-selected"
                >
                  选项一
                </div>
                <div
                  class="za-wheel-item"
                >
                  选项二
                </div>
              </div>
            </div>
          </div>
          <div
            class="za-picker-mask-bottom"
          />
        </div>
      </div>
    </div>
    <div
      class="za-mask normal"
      style="-webkit-animation-duration:200ms;animation-duration:200ms"
    />
  </div>
</div>
`;

exports[`Picker render custom label 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-popup za-popup-hidden"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-picker-wrapper"
      >
        <div
          class="za-picker-header"
        >
          <div
            class="za-picker-cancel"
          >
            取消
          </div>
          <div
            class="za-picker-title"
          >
            请选择
          </div>
          <div
            class="za-picker-submit"
          >
            确定
          </div>
        </div>
        <div
          class="za-picker-panel"
        >
          <div
            class="za-picker-mask-top"
          />
          <div
            class="za-picker-view"
          >
            <div
              class="za-wheel"
            >
              <div
                class="za-wheel-content"
              >
                <div
                  class="za-wheel-item za-wheel-item-selected"
                >
                  北京市
                </div>
                <div
                  class="za-wheel-item"
                >
                  上海市
                </div>
              </div>
            </div>
            <div
              class="za-wheel"
            >
              <div
                class="za-wheel-content"
              >
                <div
                  class="za-wheel-item za-wheel-item-selected"
                >
                  海淀区
                </div>
                <div
                  class="za-wheel-item"
                >
                  西城区
                </div>
              </div>
            </div>
          </div>
          <div
            class="za-picker-mask-bottom"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
